--- a/directors2/package.json
+++ b/directors2/package.json
@@ -9,12 +9,15 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sharp": "^0.31.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
