--- a/directors2/package.json
+++ b/directors2/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "sanitize-html": "^2.8.1",
     "sharp": "^0.31.3",
